kubernetes/apps/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  ports:
    - port: 8080
  selector:
    app: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-peers
  namespace: media
  annotations:
    io.cilium/lb-ipam-ips: "10.77.20.225"
spec:
  type: LoadBalancer
  ports:
    - name: peers-tcp
      port: 25565
      protocol: TCP
    - name: peers-udp
      port: 25565
      protocol: UDP
  selector:
    app: qbittorrent
