kubernetes/apps/media/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - qbittorrent.local.elmurphy.com
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
